--- a/Enfoca/Features/Shared/WordPairTableStoryboard.storyboard
+++ b/Enfoca/Features/Shared/WordPairTableStoryboard.storyboard
@@ -33,6 +33,13 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="104.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kSC-Ip-J5i">
+                                                    <rect key="frame" x="16" y="102.5" width="359" height="2"/>
+                                                    <color key="backgroundColor" red="0.95675891639999999" green="0.95692259069999996" blue="0.95674854519999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="2" id="4ke-t5-Nlk"/>
+                                                    </constraints>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" horizontalCompressionResistancePriority="752" text="100%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b7w-fH-zFG">
                                                     <rect key="frame" x="315.5" y="41" width="51.5" height="23"/>
                                                     <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="20"/>
@@ -40,34 +47,38 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="SecondaryText" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foa-iy-c0j">
-                                                    <rect key="frame" x="8" y="38.5" width="299.5" height="28"/>
+                                                    <rect key="frame" x="8" y="42.5" width="299.5" height="28"/>
                                                     <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="24"/>
                                                     <color key="textColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags, tags" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCt-hK-f4n">
-                                                    <rect key="frame" x="8" y="66.5" width="299.5" height="34"/>
+                                                    <rect key="frame" x="8" y="70.5" width="299.5" height="26"/>
                                                     <fontDescription key="fontDescription" name="Helvetica-LightOblique" family="Helvetica" pointSize="13"/>
                                                     <color key="textColor" red="0.66267138719558716" green="0.66278749704360962" blue="0.66266411542892456" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="753" text="Primary Text Fuckity fuck fuck why doesnt it work" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BRl-wU-i9q">
-                                                    <rect key="frame" x="8" y="4" width="299.5" height="34.5"/>
+                                                    <rect key="frame" x="8" y="8" width="299.5" height="34.5"/>
                                                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="30"/>
                                                     <color key="textColor" red="0.47003650665283203" green="0.65289556980133057" blue="0.0026309711392968893" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="b7w-fH-zFG" secondAttribute="trailing" id="ICg-yi-4ji"/>
                                                 <constraint firstAttribute="leadingMargin" secondItem="BRl-wU-i9q" secondAttribute="leading" id="MzO-Zd-Pby"/>
+                                                <constraint firstAttribute="bottom" secondItem="kSC-Ip-J5i" secondAttribute="bottom" id="Ra6-U8-zBC"/>
+                                                <constraint firstAttribute="trailing" secondItem="kSC-Ip-J5i" secondAttribute="trailing" id="VXB-pV-imz"/>
+                                                <constraint firstItem="kSC-Ip-J5i" firstAttribute="leading" secondItem="T9w-6v-Kek" secondAttribute="leading" constant="16" id="Xne-db-7Qb"/>
                                                 <constraint firstItem="foa-iy-c0j" firstAttribute="width" secondItem="BRl-wU-i9q" secondAttribute="width" id="a9m-EV-R6i"/>
                                                 <constraint firstItem="b7w-fH-zFG" firstAttribute="centerY" secondItem="T9w-6v-Kek" secondAttribute="centerY" id="cIt-On-rit"/>
                                                 <constraint firstItem="kCt-hK-f4n" firstAttribute="width" secondItem="foa-iy-c0j" secondAttribute="width" id="fhq-nk-PdM"/>
-                                                <constraint firstItem="BRl-wU-i9q" firstAttribute="top" secondItem="T9w-6v-Kek" secondAttribute="top" constant="4" id="gTZ-Oq-p94"/>
+                                                <constraint firstItem="BRl-wU-i9q" firstAttribute="top" secondItem="T9w-6v-Kek" secondAttribute="top" constant="8" id="gTZ-Oq-p94"/>
                                                 <constraint firstItem="foa-iy-c0j" firstAttribute="leading" secondItem="BRl-wU-i9q" secondAttribute="leading" id="gfI-89-vs9"/>
                                                 <constraint firstItem="b7w-fH-zFG" firstAttribute="leading" secondItem="BRl-wU-i9q" secondAttribute="trailing" constant="8" id="hT0-4r-uad"/>
-                                                <constraint firstAttribute="bottom" secondItem="kCt-hK-f4n" secondAttribute="bottom" constant="4" id="nJQ-m0-CdT"/>
+                                                <constraint firstAttribute="bottom" secondItem="kCt-hK-f4n" secondAttribute="bottom" constant="8" id="nJQ-m0-CdT"/>
                                                 <constraint firstItem="kCt-hK-f4n" firstAttribute="leading" secondItem="foa-iy-c0j" secondAttribute="leading" id="orT-TW-bbn"/>
                                                 <constraint firstItem="kCt-hK-f4n" firstAttribute="top" secondItem="foa-iy-c0j" secondAttribute="bottom" id="qYl-wr-Jrs"/>
                                                 <constraint firstItem="foa-iy-c0j" firstAttribute="top" secondItem="BRl-wU-i9q" secondAttribute="bottom" id="qej-hk-hgx"/>
